# OrionLauncher

./: .gitignore  CODE_OF_CONDUCT.md  README.md  build.py  init.py  orion.py  pyproject.toml
.github/workflows/: publish_release.yml
Controller/: __init__.py  account_controller.py  base_controller.py  game_controller.py  settings_controller.py
Core/: __init__.py
Core/Installation/: __init__.py  adapter.py  callback_converter.py  example.py  scheduler.py  tasks.py
Core/Repository/: Config.py  Path.py  __init__.py
Core/downloader/: downloader.py
Core/game/: __init__.py  daemon.py  local_versions.py
Core/request/: __init__.py  downloader.py  minecraft_downloader.py  optimized_downloader.py
Core/user/: __init__.py
Core/version/: __init__.py  minecraft_version.py
Utils/: abc.py  callbacks.py  database.py  locale_manager.py  path.py  request.py  tools.py  types.py  uuid.py
Utils/Exceptions/: __init__.py  code.py
View/: __init__.py  color_picker.py  home_page.py  installations_page.py  login_dialog.py  main_window.py  progress_dialog.py  settings_page.py  theme_manager.py
examples/: account_login_callbacks_example.py
locales/: en_US.json  zh_CN.json  zh_TW.json
source/: conf.py  index.rst
source/api/: callbacks.rst  controller.rst  core.rst  downloader.rst  exceptions.rst  index.rst  utils.rst
src/: __main__.py  settings.py
src/controller/: __init__.py  account_controller.py  game_controller.py  settings_controller.py
src/core/: __init__.py
src/utils/: callbacks.py  extented_settings.py  request.py
src/view/: __init__.py  color_picker.py  (+6 more)
(+18 files in other folders)
