[project]
name = "orionlauncher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "minecraft-launcher-lib>=7.1",
    "pyside6>=6.9.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv]
index-url = "https://mirrors.163.com/pypi/simple/"
