[project.optional-dependencies]
dev = [
    "setuptools>=61.0",
    "setuptools-scm[toml]>=6.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project]
name = "orionlauncher"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "httpx>=0.27.0",
    "minecraft-launcher-lib>=7.1",
    "pyside6>=6.9.1",
]

[tool.uv]
index-url = "https://mirrors.163.com/pypi/simple/"

[tool.setuptools_scm]
write_to = "_version.py"
